# stereo-vision

./: LICENSE  README.md  stereo-vision.cabal
app/: Main.hs
