cabal-version:       2.4

name:                stereo-vision
version:             0.1.0.0
synopsis:            Stereo Vision in Haskell
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          philipp.schuster@uni-tuebingen.de
-- copyright:
category:            Graphics
extra-source-files:  README.md

executable stereo-vision
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      app
  default-language:    Haskell2010
